Fix strange wrapping of colon after topic type
The way I was doing this before had the colon as part of the metadata,
which meant that it could wrap onto the next line in thin windows,
giving a result like:

Article
: 1500 words

This changes it so that it's added with CSS after the content type when
needed, so it won't wrap separately.

--- a/tildes/scss/modules/_topic.scss
+++ b/tildes/scss/modules/_topic.scss
@@ -90,6 +90,12 @@
   margin-right: 0.4rem;
 }
 
+// Add a colon after the topic-content-type only when there's metadata after it
+.topic-content-type:not(:last-child)::after {
+  content: ": ";
+  margin-right: 0.2rem;
+}
+
 .topic-group {
   margin-right: 0.4rem;
 }
